src/compiletest/lcell-09.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> $DIR/lcell-09.rs:12:14
   |
11 |         let c1mutref = owner.rw(&c1);
   |                        ----- mutable borrow occurs here
12 |         test(&owner);    // Compile error
   |              ^^^^^^ immutable borrow occurs here
13 |         *c1mutref += 1;
   |         -------------- mutable borrow later used here
